Fix README images and binary git diffs breaking CI.
Use absolute image URLs at the top of README; decode git capture leniently and skip binary file contents so PNG pushes do not fail AIV Gate.